# rust-docs-mcp-server

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: release.yml
src/: doc_loader.rs  embeddings.rs  error.rs  main.rs  server.rs
